# atbrew.github.io

./: .gitignore  CNAME  GEMINI.md  README.md  pyproject.toml
.github/workflows/: cv-pdf-preview-cleanup.yml  cv-pdf-preview.yml  jekyll-gh-pages.yml
docs/: .gitignore  Gemfile  _config.yml  about.markdown  career.markdown  cv-long.markdown  cv.markdown  index.markdown  links.markdown  posts.md  projects.md  serve.sh
docs/_includes/: analytics.html  floating-profile.html  head.html
docs/_layouts/: blog.html  default.html  home.html  post.html
docs/_posts/: 2023-06-01-welcome-to-jekyll.markdown  2024-01-01-the-joy-and-danger-of-hacking-ml.markdown  2024-01-30-raspberry-pie-electronics.markdown  2024-1-25-chess_project.markdown
docs/assets/css/: custom.css  cv.css  print_extras.css
src/: convert_markdown_to_pdf_in_place.py  remove_background.py
